# pgmoneta_mcp

./: AUTHORS  Cargo.toml  README.md  clippy.toml  install.cmd  install.sh
.github/workflows/: release.yml
contrib/docker/llama-cpp/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
contrib/docker/ollama/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
contrib/docker/vllm/: Dockerfile  README.md  docker-compose.yml
contrib/rpm/: pgmoneta-mcp.conf
doc/: BUILDING.md  CONFIGURATION.md  DEVELOPERS.md  GETTING_STARTED.md  LOCAL_LLM.md  RPM.md
doc/man/: pgmoneta-mcp-admin.1.rst
doc/manual/en/: 01-introduction.md  02-installation.md  03-quickstart.md  04-configuration.md  05-tools.md  10-backup.md  11-restore.md  12-list-backups.md  13-verify.md  14-delete.md  15-compress.md  16-decompress.md  17-encrypt.md  18-decrypt.md  20-archive.md  20-llm.md  21-annotation.md  21-ollama.md  22-get-info.md  22-llama-cpp.md  23-ramalama.md  23-retain.md  24-expunge.md  24-vllm.md  25-ping.md  26-status.md  27-set-mode.md  28-shutdown.md  29-conf-ls.md  30-conf-get.md  31-conf-set.md  32-conf-reload.md  33-get-metrics.md  34-metric.md  35-clear.md  36-walinfo.md  50-client.md  51-inspector.md  60-llm.md  61-llama-cpp.md  (+14 more)
src/: client.rs  configuration.rs  constant.rs  handler.rs  lib.rs  logging.rs  mcp_client.rs  security.rs  telemetry.rs  utils.rs
src/client/: annotate.rs  archive.rs  backup.rs  conf.rs  delete.rs  info.rs  metrics.rs  ping.rs  restore.rs  retention.rs  status.rs  verify.rs  walinfo.rs
src/handler/: annotate.rs  archive.rs  backup.rs  compression.rs  conf.rs  delete.rs  encryption.rs  hello.rs  info.rs  metrics.rs  ping.rs  restore.rs  retention.rs  status.rs  verify.rs  walinfo.rs
src/llm/: openai.rs
test/: check.sh
test/test-suite/: Dockerfile
test/test-suite/conf/: pgmoneta.conf  postgresql.conf
tests/: annotate_test.rs  archive_test.rs  backup_test.rs  compression_test.rs  conf_test.rs  delete_test.rs  encryption_test.rs  handler_test.rs  info_test.rs  list_backup_test.rs  mode_test.rs  ping_test.rs  restore_test.rs  retention_test.rs  status_test.rs  verify_test.rs  walinfo_test.rs
tests/common/: mod.rs
